--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -34,6 +34,14 @@
   object-fit: contain;
 }
 
+.topButton {
+  margin-block: 5%;
+}
+
+.contentEvent {
+  margin-top: 5%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
