--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -42,6 +42,15 @@
   margin-top: 5%;
 }
 
+.pointer {
+  cursor: pointer
+}
+
+a.redirect, a.redirect:visited, a.redirect:hover, a.redirect:active {
+  color: inherit;
+  text-decoration: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
