--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -34,6 +34,12 @@
   object-fit: contain;
 }
 
+.imgLogo{
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
 .topButton {
   margin-block: 5%;
 }
