--- a/Front-End/src/css/profil.css
+++ b/Front-End/src/css/profil.css
@@ -27,7 +27,8 @@ h6 {
     width: 160px;
     height: 160px;
     border-radius: 80px;
-    border: 1px groove
+    border: 1px groove;
+    margin-bottom: 10%;
 }
 
 .ProfilAction{
